Dummy_Package_for_scratch_org/main/default/objects/Test_Script__c/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <label>Expected Result</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>