Dummy_Package_for_scratch_org/main/default/objects/Test_Script__c/fields/Introduction__c.field-meta.xml
<CustomField>
    <fullName>Introduction__c</fullName>
    <label>Introduction</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>