Dummy_Package_for_scratch_org/main/default/objects/Test_Script__c/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <label>Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>