Dummy_Package_for_scratch_org/main/default/objects/Test_Script__c/fields/Peer_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Peer_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peer Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Test Scripts</relationshipLabel>
    <relationshipName>Test_Scripts</relationshipName>
    <type>Lookup</type>
</CustomField>