Dummy_Package_for_scratch_org/main/default/objects/Test_Script__c/fields/Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites__c</fullName>
    <label>Prerequisites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>