Dummy_Package_for_scratch_org/main/default/objects/Test_Script__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <formula>User_Story__r.Sprint__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint</label>
    <type>Text</type>
</CustomField>