Dummy_Package_for_scratch_org/main/default/objects/Test_Script__c/fields/Test_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Description__c</fullName>
    <label>Test Description</label>
    <type>TextArea</type>
</CustomField>