Dummy_Package_for_scratch_org/main/default/objects/Test_Script__c/fields/Test_Title__c.field-meta.xml
<CustomField>
    <fullName>Test_Title__c</fullName>
    <label>Test Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>