Dummy_Package_for_scratch_org/main/default/objects/Test_Script__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Test Scripts (User Story)</relationshipLabel>
    <relationshipName>Test_Scripts_UserStory</relationshipName>
    <type>Lookup</type>
</CustomField>