Dummy_Package_for_scratch_org/main/default/objects/Test_Script__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Title__c</columns>
    <columns>Org__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>